# rqt_bag_to_dataset

./: .gitignore  CMakeLists.txt  README.md  datashape.md  package.xml  plugin.xml  setup.py
doc/: datashape.md
resource/: RosBagToDataset.ui
scripts/: bag_to_dataset
src/bag_to_dls/: bag_to_dls.py
src/rosbag_pandas/: rosbag_pandas.py
