<?xml version="1.0"?>
<package format="3">
  <name>rqt_bag_to_dataset</name>
  <version>0.0.1</version>
  <description>RQT rosbag to dataset converter</description>

  <maintainer email="marton@neorobot.hu">nils</maintainer>

  <license>NO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>qt_dotgraph</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
